--- a/src/main/resources/h2.properties
+++ b/src/main/resources/h2.properties
@@ -1,2 +1,3 @@
-history_db=jdbc:h2:file:~/anime_history
-test_db=jdbc:h2:mem:test_db
+spring.datasource.test_db=jdbc:h2:mem:test_db
+spring.datasource.history_db=jdbc:h2:file:~/h2_db
+spring.datasource.driverClassName=org.h2.Driver
