проверить работу бд при запуске

--- a/src/main/resources/h2.properties
+++ b/src/main/resources/h2.properties
@@ -1,3 +1,3 @@
-spring.datasource.test_db=jdbc:h2:mem:test_db
-spring.datasource.history_db=jdbc:h2:file:~/h2_db
+spring.datasource.test_db=jdbc:h2:tcp://localhost/~/test_db;DB_CLOSE_DELAY=-1
+spring.datasource.history_db=jdbc:h2:tcp://localhost/~/h2_db
 spring.datasource.driverClassName=org.h2.Driver
