используем json вместо бд

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # JMX ??? ?? ?????, ? ??? ?????????? ???????? ???????? ??????
 spring.jmx.enabled=false
 spring.jpa.show-sql=true
+myapp.default_browser=firefox
+myapp.skip_opening=true
+myapp.skip_ending=true
