findAll возвращает все объекты в порядке их изменений

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # JMX ??? ?? ?????, ? ??? ?????????? ???????? ???????? ??????
 spring.jmx.enabled=false
 spring.jpa.show-sql=true
+spring.main.allow-bean-definition-overriding=true
 myapp.default_browser=firefox
 myapp.skip_opening=true
 myapp.skip_ending=true
