--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,8 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.25.0</version>
+            <!--            <version>2.25.0</version> OLD-->
+            <version>2.42.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
