перезапись application.properties файла

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-# JMX ??? ?? ?????, ? ??? ?????????? ???????? ???????? ??????
+#Wed Jun 15 16:29:36 MSK 2022
+myapp.default_browser=Chrome
+spring.main.allow-bean-definition-overriding=true
 spring.jmx.enabled=false
 spring.jpa.show-sql=true
-spring.main.allow-bean-definition-overriding=true
